syntax = "proto3";

package auth.v1;

service Auth {
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
}
